<resources>
    <string name="app_name">&app_name;</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://api.adidasio.com/.well-known/assetlinks.json\" }]</string>
    <string name="lang_type">3</string>
    <string name="book_city">首頁</string>
    <string name="go_top">回頂部</string>
    <string name="frequency_division">分類</string>
    <string name="mine">我的</string>
    <string name="search_tip">搜索作品名、作者名、内容等</string>
    <string name="search">搜索</string>
    <string name="history_search">歷史記錄</string>
    <string name="not_search_content">抱歉~！沒有搜索到相關内容</string>
    <string name="other_recommend">可以看看其他推薦哦~</string>
    <string name="other_search">其他人都在搜~</string>
    <string name="restar_on_week">每週一00:00重置</string>
    <string name="popularity_list">熱銷榜</string>
    <string name="collection_list">收藏榜</string>
    <string name="new_book_list">新劇榜</string>
    <string name="rank_list">排行榜</string>
    <string name="must_read">必讀好劇</string>
    <string name="vip_jingping">VIP精品</string>
    <string name="for_your_choice">為你優選</string>
    <string name="find_more_book">添加更多劇籍</string>
    <string name="more_rank">更多榜單</string>
    <string name="look_more">更多</string>
    <string name="next_read">繼續閲讀</string>
    <string name="score">評分</string>
    <string name="search_content">請輸入搜索内容</string>
    <string name="login_regist">點擊登陸</string>
    <string name="account_security">賬號與安全</string>
    <string name="cancel">取消</string>
    <string name="done">確認</string>
    <string name="settings">設置</string>
    <string name="delete">刪除</string>
    <string name="block">屏蔽</string>
    <string name="bulk_download">批量下載</string>
    <string name="chapter_num">所有章節</string>
    <string name="next_chapter_num">后%s章</string>
    <string name="download_free">下載免費章節</string>
    <string name="personal_information">個人信息</string>
    <string name="clear_cache">清除緩存</string>
    <string name="user_agreement">&user_agreement;</string>
    <string name="privacy_policy">&privacy_policy;</string>
    <string name="message_center">消息中心</string>
    <string name="version_update">檢測更新</string>
    <string name="languages">多語言</string>
    <string name="log_out">登出</string>
    <string name="account_cancellation">注銷賬號</string>
    <string name="enough_coins">您的餘額不足以支付當前章節跳轉至金幣充值</string>
    <string name="locale">繁體中文</string>
    <string name="vip_membership">VIP會員</string>
    <string name="records">開通記錄</string>
    <string name="vip_explain">1、vip會員時長中，1個月=31天 \n2、開通會員即默認同意【&app_name;】《&user_agreement;》、《&privacy_policy;》及《&vip_service_agreement;》\n3、諾開通會員完成後10分鐘内會員標識仍未被點亮，可嘗試退出賬號重新登錄，或者在【&help_feed;】中提交問題\n4、VIP屬於虛擬業務服務，儲值成功後不支持退款，敬請諒解\n5、購買後，賬戶長時間無變化，請在【&help_feed;】中提交問題。</string>
    <string name="no_more_data">沒有更多數據了</string>
    <string name="profile_photo">頭像</string>
    <string name="name">昵稱</string>
    <string name="quanbu">全部</string>
    <string name="ershi_below">20萬字以下</string>
    <string name="ershi_sanshi">20–30萬字</string>
    <string name="sanshi_wushi">30–50萬字</string>
    <string name="wushi_yibai">50–100萬字</string>
    <string name="yibai_liangbai">100–200萬字</string>
    <string name="liangbai_top">200萬字以上</string>
    <string name="not_log_in">未登錄</string>
    <string name="gender">性別</string>
    <string name="birthday">生日</string>
    <string name="whats_up">個性簽名</string>
    <string name="signature">這個人很懶，什麽都沒有留下</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="unknown">未知</string>
    <string name="detail_tro">簡介</string>
    <string name="detail_tro1">簡介：</string>
    <string name="detail_like">猜你喜歡</string>
    <string name="fab_pingfen">發佈評分</string>
    <string name="fab">發佈</string>
    <string name="fab_pingfen_tip">你覺得這部小説怎麽樣呢？分享下閲讀后的感受吧~</string>
    <string name="dianji_star">點擊星星進行評價</string>
    <string name="one_star">非常糟糕</string>
    <string name="two_star">不好看</string>
    <string name="three_star">一般般</string>
    <string name="four_star">很好看，值得收藏</string>
    <string name="five_star">非常好看，我要推薦</string>
    <string name="sure">確定</string>
    <string name="please_enter_your_number">請輸入手機號碼</string>
    <string name="please_enter_your_number_">852  請輸入手機號碼</string>
    <string name="get_code">獲取驗證碼</string>
    <string name="please_enter_verification_code">請輸入驗證碼</string>
    <string name="contact_customs">聯繫客服</string>
    <string name="help_feed">&help_feed;</string>
    <string name="setting">設置</string>
    <string name="login_jump">跳過</string>
    <string name="fast_register">快速註冊</string>
    <string name="phone_login">手機號登錄</string>
    <string name="login_tip_one">點擊登錄表示已同意&app_name;</string>
    <string name="login_tip_two">《&user_agreement;》</string>
    <string name="login_tip_three">和</string>
    <string name="login_tip_four">《&privacy_policy;》</string>
    <string name="login_tip_five">及</string>
    <string name="login_tip_six">《第三方Ushare服務和隱私條款》</string>
    <string name="author_sign">這個人很懶，什麽都沒有留下</string>
    <string name="author_book">TA的作品</string>
    <string name="whether_add_bookshelf">是否加入劇架？</string>
    <string name="oh_wait">再想想</string>
    <string name="add_to_bookshelf">加入劇架</string>
    <string name="whether_remove_bookshelf">是否從劇架移出？</string>
    <string name="think_twice_please">人家很好看的，再給個機會吧～</string>
    <string name="yes_please">移除</string>
    <string name="no_thanks">再想想</string>
    <string name="explain">說明</string>
    <string name="explain_content">1、購買付費小說时，可開啟自動購買功能：每當閱讀到该小說的付费章节时将会自動購買，不再展示確認購買弹窗（若金幣不足則會購買失敗），開啟时儘針對當前小說有效。
\n 2、開啟「自動購買下一章」說明：開啟後儘会帮助用戶在購買小說时自動勾選“自動購買下一話“，不影响任何小說本身的自動購買狀態，用戶可以根据自己需要自行開啟。</string>
    <string name="choose_qusetion">選擇反饋類型</string>
    <string name="choose">請選擇</string>
    <string name="enter_question">請輸入你所遇到的詳細問題或建議</string>
    <string name="add_pics">添加圖片</string>
    <string name="enter_email">輸入您的聯繫郵箱（選填）</string>
    <string name="submit">提交</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="please_select_a_time">請選擇時間</string>
    <string name="new_user_gift">新用戶禮包</string>
    <string name="complimentary">金幣免費贈送</string>
    <string name="now_get">立即領取</string>
    <string name="geted">已領取</string>
    <string name="great_toast">恭喜你，領取成功</string>
    <string name="ok">我知道了</string>
    <string name="download_start">開始下載</string>
    <string name="download_done">下載成功</string>
    <string name="clear_cache_done">清除緩存成功</string>
    <string name="comment">評論</string>
    <string name="choose_item">請選擇充值金額</string>
    <string name="details">帳戶明細</string>
    <string name="about_book_coins">金幣充值</string>
    <string name="code_error">驗證碼輸入錯誤</string>
    <string name="bind_phone_numbert">綁定手機號</string>
    <string name="book_coins">+%s 金幣</string>
    <string name="give_coins">金幣</string>
    <string name="congratulations_give_coins">恭喜您获得</string>
    <string name="discount_for_new_user">首充優惠</string>
    <string name="most_people_choose">最多选择</string>
    <string name="vip_is_not_available_yet">開通VIP會員立享特權</string>
    <string name="validity"> %s 到期</string>
    <string name="choose_from_album">相冊</string>
    <string name="please_enter">請輸入</string>
    <string name="please_enter_your_name">請輸入昵稱</string>
    <string name="update_name">修改昵稱</string>
    <string name="confirm">確定</string>
    <string name="vip_open_record">開通記錄</string>
    <string name="recharge_record">明細</string>
    <string name="continue_download">繼續下載</string>
    <string name="go_pay">去購買</string>
    <string name="download_pay_tip">本劇籍存在未購買的章節，是否購買後下載全本？</string>
    <string name="batch_pay">批量購買</string>
    <string name="batch_pay_one">（購買包含本章）</string>
    <string name="follow_chapter">後續10章</string>
    <string name="the_follow">後續</string>
    <string name="chapter">章</string>
    <string name="cur_user">當前可用：</string>
    <string name="total_shubi">總計：</string>
    <string name="sure_buy">確認購買</string>
    <string name="read_pay_content_three">金幣</string>
    <string name="current_balance">當前余额:</string>
    <string name="recharge_instructions">儲值說明</string>
    <string name="recharge_instructions_text0">請您仔細閱讀一下說明內容，用戶充值金幣即視為您已閱讀并同意本說明內容。如果您未滿18歲，請在監護人陪同充值</string>
    <string name="recharge_instructions_text1">1、金幣兌換規則：1元=100金幣</string>
    <string name="recharge_instructions_text2">1、金幣兌換規則：1元=100金幣\n2、金幣屬於虛擬業務服務，充值成功後不支持退款，敬請諒解\n3、購買後，帳戶長時間無變化，請在【幫助反饋】中提交問題。</string>
    <string name="recharge_question">充值遇到問題？請戳這裡</string>
    <string name="pay">去儲值</string>
    <string name="account_exception">您當前帳號異常，已鎖定。請聯繫客服</string>
    <string name="coins_not_enough">抱歉，您的金幣不足，趕緊去充值吧</string>
    <string name="please_sel">請選擇</string>
    <string name="top_tip">重要提示</string>
    <string name="unbind_account">是否解除%s帳號綁定</string>
    <string name="unbind_phone">是否解除當前手機號綁定</string>
    <string name="unbound">未綁定</string>
    <string name="phone">手機綁定</string>
    <string name="google">Google賬號</string>
    <string name="facebook">Facebook账号</string>
    <string name="reminder">溫馨提示</string>
    <string name="payment_method">支付方式</string>
    <string name="download_number_chapter">已下载%s章</string>
    <string name="not_recharge">啊哦，本月還沒充值過哦～</string>
    <string name="not_vip">啊哦，您還沒開通記錄哦～</string>
    <string name="loading__">正在刷新中…</string>
    <string name="refresh_failure">刷新失敗</string>
    <string name="pull_down_refresh">下拉可以刷新</string>
    <string name="release_refresh_now">鬆開立刻刷新</string>
    <string name="vip_open">立即開通</string>
    <string name="vip_open2">立即開通</string>
    <string name="immediate_payment">立即支付</string>
    <string name="year_not_charged">啊哦，本月還沒消費過哦～</string>
    <string name="top_up_records">充值記錄</string>
    <string name="consumption_records">消費記錄</string>
    <string name="cant_unbunding">當前僅有該登錄方式，無法解綁</string>
    <string name="a_new_version">發現新版本</string>
    <string name="vip4">【&help_feed;】</string>
    <string name="vip3">《&vip_service_agreement;》</string>
    <string name="vip2">《&privacy_policy;》</string>
    <string name="vip1">《&user_agreement;》</string>
    <string name="terms_for_vips">&vip_service_agreement;</string>
    <string name="sure_cancel_account">仍要註銷帳戶嗎？</string>
    <string name="sure_delete_account">確認註銷</string>
    <string name="remove_account_tip">註銷用戶將刪除您帳戶上所有的數據且無法找回，包含個人資料、充值紀錄、未使用的金幣及VIP等。請慎重使用此功能！</string>
    <string name="feed_sel_img">最多選擇三張照片</string>
    <string name="item_all_comment">查看共%s條回復</string>
    <string name="my_all_comment">共%s條</string>
    <string name="report">舉報</string>
    <string name="send_score">發布評分</string>
    <string name="score_edit_hint">你覺得這部小説怎麽樣呢？分享下閱讀後的感受吧～</string>
    <string name="score_send">發表</string>
    <string name="score_star1">非常糟糕</string>
    <string name="score_star2">不好看</string>
    <string name="score_star3">一般般</string>
    <string name="score_star4">很好看，值得收藏</string>
    <string name="score_star5">非常好看，我要推薦</string>
    <string name="comment_text_max">評論超過256個字</string>
    <string name="comment_text_min">評論至少要3個字</string>
    <string name="score_text">評分</string>
    <string name="comment_send">發送</string>
    <string name="send_tip">*超過10個字以上的評論就可以發表啦</string>
    <string name="comment_add">添加評論</string>
    <string name="comment_del_s">刪除成功</string>
    <string name="my_comment">我的評論</string>
    <string name="comment_del_title">刪除確認</string>
    <string name="comment_del_content">刪除您的評論後，所有的用戶將看不到該評論，確定要刪除嗎？</string>
    <string name="confirm_del">確認刪除</string>
    <string name="cancel_del">再想想</string>
    <string name="comment_done">完成</string>
    <string name="no_comments">沒有評論</string>
    <string name="rules">規則</string>
    <string name="rules_one">1、每日簽到可得金幣，連續簽到7天可獲得更多金幣獎勵；\n2、簽到次數當周纍計，每周一00:00清零；\n3、通過不正當手段參與活動的用戶，將會取消你的獲獎資格。</string>
    <string name="rules_tip">注：簽到玩法獎池會不定期更新，請隨時關注。</string>
</resources>