<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rect_ffffff_10"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="21dp"
            android:text="@string/top_tip"
            android:textColor="@color/black_353535"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/remove_account_tip"
            android:textColor="@color/C_828282"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="21dp"
            android:text="@string/sure_cancel_account"
            android:textColor="@color/black_353535"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="25dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.coorchice.library.SuperTextView
                android:id="@+id/tv_remove_account"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="13dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sure_delete_account"
                android:textColor="@color/C_828282"
                android:textSize="17sp"
                app:stv_corner="22dp"
                app:stv_solid="@color/C_f2f2f2" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="13dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/oh_wait"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:background="@drawable/btn_n" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>