<?xml version="1.0" encoding="utf-8"?>
<com.lihang.ShadowLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:hl_cornerRadius_leftTop="12dp"
    app:hl_cornerRadius_rightTop="12dp"
    app:hl_layoutBackground="@color/white"
    app:hl_shadowHidden="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="#999999"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/please_select_a_time"
                android:textColor="@color/black_353535"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/confirm"
                android:textColor="@color/key_color"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/C_f2f2f2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dp_10"
            android:paddingTop="15dp"
            android:paddingBottom="20dp">

            <View
                android:id="@+id/only_year_view_left"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="2"
                android:visibility="gone" />

            <com.gys.play.util.PickerView
                android:id="@+id/dpv_year"
                android:layout_width="0dp"
                android:layout_height="@dimen/picker_view_height"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/tv_year_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/year"
                android:textColor="@color/black_353535"
                android:textSize="15sp" />

            <View
                android:id="@+id/only_year_view_right"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="2"
                android:visibility="gone" />

            <com.gys.play.util.PickerView
                android:id="@+id/dpv_month"
                android:layout_width="0dp"
                android:layout_height="@dimen/picker_view_height"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/tv_month_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/month"
                android:textColor="@color/black_353535"
                android:textSize="15sp" />

            <com.gys.play.util.PickerView
                android:id="@+id/dpv_day"
                android:layout_width="0dp"
                android:layout_height="@dimen/picker_view_height"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/tv_day_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/day"
                android:textColor="@color/black_353535"
                android:textSize="15sp" />

            <com.gys.play.util.PickerView
                android:id="@+id/dpv_hour"
                android:layout_width="0dp"
                android:layout_height="@dimen/picker_view_height"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/tv_hour_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour"
                android:textColor="@color/black_353535"
                android:textSize="15sp" />

            <com.gys.play.util.PickerView
                android:id="@+id/dpv_minute"
                android:layout_width="0dp"
                android:layout_height="@dimen/picker_view_height"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/tv_minute_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/minute"
                android:textColor="@color/black_353535"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

</com.lihang.ShadowLayout>