<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_rect_ffffff_10"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/dialogTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/reminder"
            android:textColor="@color/black_353535"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            style="@style/dialogContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="7dp"
            android:paddingLeft="25dp"
            android:paddingTop="20dp"
            android:paddingRight="25dp"
            android:paddingBottom="27dp"
            android:text="@string/download_pay_tip"
            android:textColor="@color/black_353535"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="13dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rect_dadada_20"
                android:gravity="center"
                android:text="@string/continue_download"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_weight="1"
                android:background="@drawable/shape_rect_242326_20"
                android:gravity="center"
                android:text="@string/go_pay"
                android:textColor="@color/fbbc35"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>